--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FirstReactApp</title>
+    <title>SimpleMessenger</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
